Updated content of website

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Download</a>
+                        <a class="page-scroll" href="#download">Projects</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -87,21 +87,28 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
+                <a>
+                    <img border="0" alt="Me" src="./img/me.png" width="250" height="250">
+                </a>
                 <p>Hello! My name is Riley Boudreau and I'm an 18 year old student at UIT Startup Immersion. I graduated from Centre scolaire Étoile de l'Acadie in June of 2016. I'm fully fluent in both English and French.</p>
-                <p></p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
             </div>
         </div>
     </section>
 
-    <!-- Download Section -->
+    <!-- Projects Sections (AKA DOWNLOAD) Section -->
     <section id="download" class="content-section text-center">
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <h2>Projects</h2>
+                    <p>Founded BreakLimitGamers, a non-profit gaming community that offers free game server and VoIP hosting for other clans!</p>
+                    <a href="https://www.breaklimitgamers.com">
+                        <img border="0" alt="BLG" src="./img/blglogo.png" width="100" height="100">
+                    </a>
+                    <p>Created the website of Centre communautaire Étoile de l'Acadie, a non-profit french community centre in the Sydney are!</p>
+                    <a>
+                        <img border="0" alt="CCÉA" src="./img/ccealogo.png">
+                    </a>
                 </div>
             </div>
         </div>
@@ -111,27 +118,18 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+                <h2>Contact Me</h2>
+                <p>Feel free to e-mail me for any questions/inquiries or check out my GitHub</p>
+                <p><a href="mailto:feedback@startbootstrap.com">contact@rileyboudreau.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                        <a href="https://github.com/rileyboudreau" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
                 </ul>
             </div>
         </div>
     </section>
-
-    <!-- Map Section -->
-    <div id="map"></div>
 
     <!-- Footer -->
     <footer>
