--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Projects</h2>
                     <p>Founded BreakLimitGamers, a non-profit gaming community that offers free game server and VoIP hosting for other clans!</p>
-                    <a href="http://www.breaklimitgamers.com">
+                    <a href="http://breaklimitgamers.com">
                         <img border="0" alt="BLG" src="./img/blglogo.png" width="100" height="100">
                     </a>
                     <p>Created the website of Centre communautaire Étoile de l'Acadie, a non-profit french community centre in the Sydney are!</p>
-                    <a href="http://www.etoiledelacadie.ca">
+                    <a href="http://etoiledelacadie.ca">
                         <img border="0" alt="CCÉA" src="./img/ccealogo.png">
                     </a>
                 </div>
